test/pass/assignments.zn
# Test: Assignment expressions

func main() {
    # Simple assignment
    var x = 10
    var y = x
    var z = x + y

    # Compound assignments
    x += 5
    x -= 3
    x *= 2
    x /= 4
    x %= 3

    # Assignment with complex expressions
    var a = 1
    var b = 2
    var c = 3
    var d = 4
    var result = (a + b) * (c - d)
    var flag = x > 0 && y < 100

    # Increment and decrement
    x++
    ++x
    x--
    --x

    # Multiple operations
    var counter = 0
    counter++
    counter += 10
    counter--

    0
}
